Fixed z-index bug for the learn more button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,7 @@ main {
 
 @media screen and (max-width: 750px) {
   body {
-    min-height: calc(100vh - 54px);
+    // min-height: calc(100vh - 54px);
+    padding-bottom: 54px;
   }
 }
