--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -114,3 +114,7 @@ ul li:nth-child(4) span {
 footer {
   color: white;
 }
+
+main a {
+  z-index: 2;
+}
